# fnl

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
data/: 810724R0.002  config.yaml  example_spec.npy  example_spec_linelist.xlsx
fnl/: simulate.py
fts_nn_ll/: __init__.py  functions.py  manager.py  nn.py  scan.py  simulate.py
